update wm_oxydom 1502

--- a/avad_repos/avad_addons_v10/wm_oxydom/wizard/update_exchange_rate_wizard.xml
+++ b/avad_repos/avad_addons_v10/wm_oxydom/wizard/update_exchange_rate_wizard.xml
@@ -10,10 +10,11 @@
                     <sheet>
                         <group>
                             <field name="update_rate" required="1"/>
+
                          </group>
+                        <field name="exemple"   nolabel="1"/>
                         <footer>
-                            <button name="update_exchange_rate" class="oe_highlight" confirm="
-Êtes-vous sûr de vouloir mettre à jour le taux de change ?" string="Modifier" type="object"/>
+                            <button name="update_exchange_rate" class="oe_highlight" confirm="Êtes-vous sûr de vouloir mettre à jour le taux de change ?" string="Modifier" type="object"/>
                             Ou
                             <button special="cancel" string="Cancel"/>
                         </footer>
