--- a/avad_repos/avad_addons_v10/wm_oxydom/reports/report_bon_commande_template.xml
+++ b/avad_repos/avad_addons_v10/wm_oxydom/reports/report_bon_commande_template.xml
@@ -9,7 +9,7 @@
             <div class="oe_structure"/>
             <div class="row">
                 <div class="col-xs-6">
-                    <strong>Shipping address:</strong>
+                    <strong>Adresse de livraison:</strong>
                     <div t-if="o.dest_address_id">
                         <div t-field="o.dest_address_id"
                             t-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": True, "phone_icons": True}'/>
@@ -28,12 +28,12 @@
                 </div>
             </div>
 
-            <h2 t-if="o.state != 'draft'">Purchase Order Confirmation #<span t-field="o.name"/></h2>
-            <h2 t-if="o.state == 'draft'">Request for Quotation #<span t-field="o.name"/></h2>
+            <h2 t-if="o.state != 'draft'">Confirmation du Bon de commande #<span t-field="o.name"/></h2>
+            <h2 t-if="o.state == 'draft'">Bon de commande #<span t-field="o.name"/></h2>
 
             <div class="row mt32 mb32">
                 <div t-if="o.name" class="col-xs-3">
-                    <strong>Our Order Reference:</strong>
+                    <strong>Notre Référence de Commande:</strong>
                     <p t-field="o.name"/>
                 </div>
                 <div t-if="o.partner_ref" class="col-xs-3">
@@ -41,7 +41,7 @@
                     <p t-field="o.partner_ref"/>
                 </div>
                 <div t-if="o.date_order" class="col-xs-3">
-                    <strong>Order Date:</strong>
+                    <strong>Date de commande:</strong>
                     <p t-field="o.date_order"/>
                 </div>
             </div>
@@ -49,13 +49,13 @@
             <table class="table table-condensed">
                 <thead>
                     <tr>
-                        <th><strong>Description</strong></th>
+                        <th><strong>Désignation</strong></th>
                         <th><strong>Taxes</strong></th>
                         <th class="text-center"><strong>Date Req.</strong></th>
-                        <th class="text-right"><strong>Qty</strong></th>
-                        <th class="text-right"><strong>Unit Price</strong></th>
-                        <th class="text-right"><strong>Prix De Revient</strong></th>
-                        <th class="text-right"><strong>Net Price</strong></th>
+                        <th class="text-right"><strong>Qté</strong></th>
+                        <th class="text-right"><strong>Prix en devise</strong></th>
+                        <th class="text-right"><strong>Cout de revient</strong></th>
+                        <th class="text-right"><strong>Prix net</strong></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -91,7 +91,7 @@
                 <div class="col-xs-4 pull-right">
                     <table class="table table-condensed">
                         <tr class="border-black">
-                            <td><strong>Total Without Taxes</strong></td>
+                            <td><strong>Sous-total </strong></td>
                             <td class="text-right">
                                 <span t-field="o.amount_untaxed"
                                     t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
