--- a/avad_repos/avad_addons_v10/wm_oxydom/views/purchase_view.xml
+++ b/avad_repos/avad_addons_v10/wm_oxydom/views/purchase_view.xml
@@ -22,7 +22,7 @@
                      <field name="currency_name" invisible="1" />
                     <field name="manual_currency_rate_active" attrs="{'invisible' : [('controle_workflow','=',False)],'readonly': [('state','in', ('purchase','done'))]}" groups="base.group_multi_currency" />
                     <field name="manual_currency_rate" attrs="{'invisible': [('manual_currency_rate_active', '=', False)],'required':[('manual_currency_rate_active', '=', True)], 'readonly': [('state','in', ('purchase','done'))]}" groups="base.group_multi_currency" />
-                   <field name="current_rate" attrs="{'invisible': [('manual_currency_rate_active', '=', False)],'required':[('manual_currency_rate_active', '=', True)]}"   groups="base.group_multi_currency"/>
+                   <!--<field name="current_rate" attrs="{'invisible': [('manual_currency_rate_active', '=', False)],'required':[('manual_currency_rate_active', '=', True)]}"   groups="base.group_multi_currency"/>-->
                 </field>
                  <div name="button_box" position="inside">
                    <button class="oe_stat_button" string="Dossier Import" attrs="{'invisible': ['|',('check_shipped', '=', False),('manual_currency_rate_active', '=', False)]}" type="object" name="get_dossier_import"
